feat: transfer file data in 512-byte blocks